--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,4 +4,6 @@
     <dimen name="textSizeNormal">18dp</dimen>
     <dimen name="textSizeBig">22dp</dimen>
 
+    <dimen name="fab_margin">16dp</dimen>
+
 </resources>
