--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="textSizeSmall">12dp</dimen>
+    <dimen name="textSizeMidium">15dp</dimen>
     <dimen name="textSizeNormal">18dp</dimen>
     <dimen name="textSizeBig">22dp</dimen>
 
