--- a/app/src/main/res/layout/ac_home.xml
+++ b/app/src/main/res/layout/ac_home.xml
@@ -16,6 +16,16 @@
         android:gravity="right"
         android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/id_home_tv_deviceId"
+            style="@style/TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginHorizontal="30dp"
+            android:layout_weight="1"
+            android:textSize="@dimen/textSizeBig" />
+
         <Button
             android:id="@+id/but_home_settings"
             android:layout_width="40dp"
