--- a/app/src/main/res/layout/ac_settings.xml
+++ b/app/src/main/res/layout/ac_settings.xml
@@ -12,6 +12,21 @@
     tools:context=".Settings">
 
     <View
+        android:id="@+id/view11"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0" />
+
+    <Button
+        android:id="@+id/id_settings_hardReset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="10dp"
+        style="@style/Button"
+        android:layout_weight="0"
+        android:text="Resetuj Ustawienia" />
+
+    <View
         android:id="@+id/view10"
         android:layout_width="0dp"
         android:layout_height="20dp"
@@ -26,7 +41,7 @@
         android:text="Nowe hasło" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/id_settings_et_pass1"
         style="@style/EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +64,7 @@
         android:text="Powtórz hasło" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/id_settings_et_pass2"
         style="@style/EditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -83,7 +98,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
 
-            android:background="@color/butBasic"
+
             android:padding="10dp" />
 
     </LinearLayout>
@@ -121,17 +136,17 @@
                 android:id="@+id/id_settings_but_1"
 
                 style="@style/but_type_light"
-                android:text="Jednolity" />
+                android:text="Stały" />
 
             <Button
                 android:id="@+id/id_settings_but_2"
                 style="@style/but_type_light"
-                android:text="Tęcza" />
+                android:text="Tęcza 1" />
 
             <Button
                 android:id="@+id/id_settings_but_3"
                 style="@style/but_type_light"
-                android:text="Piksa przy piksie" />
+                android:text="Tęcza 2" />
         </LinearLayout>
 
         <LinearLayout
@@ -145,17 +160,14 @@
             <Button
                 android:id="@+id/id_settings_but_4"
                 style="@style/but_type_light"
-                android:text="Losowa piksa" />
+                android:text="Fala random" />
 
             <Button
                 android:id="@+id/id_settings_but_5"
                 style="@style/but_type_light"
-                android:text="Znikanie" />
+                android:text="Fade" />
 
-            <Button
-                android:id="@+id/id_settings_but_6"
-                style="@style/but_type_light"
-                android:text="Znikanie Fala" />
+
         </LinearLayout>
     </LinearLayout>
 
@@ -166,7 +178,7 @@
         android:layout_weight="1" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/id_settings_but_saveall"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         style="@style/Button"
