--- a/app/src/main/res/layout/ac_details.xml
+++ b/app/src/main/res/layout/ac_details.xml
@@ -100,4 +100,9 @@
         android:text="TextView"
         android:textColor="@color/butFont" />
 
+    <com.jjoe64.graphview.GraphView
+        android:layout_width="match_parent"
+        android:layout_height="200dip"
+        android:id="@+id/id_details_graph1" />
+
 </LinearLayout>
